[project]
name = "vsrg-irt"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "connectorx>=0.4.5",
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "numpyro>=0.21.0",
    "polars>=1.42.1",
    "psycopg2-binary>=2.9.12",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
 "scipy-stubs~=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vsrg-irt"]

[tool.uv]
package = true
